# Tefal

1/: .env  currency_api.py  pyproject.toml  requirements.txt
2/: .flake8  main.py  pyproject.toml  requirements.txt
3/: 1.sql  2.sql  3.sql  4.sql
