[tool.poetry]
name = "2"
version = "0.1.0"
description = ""
authors = ["SerHappy <lokhmanovkirill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.0.0"
flake8-pytest-style = "^1.7.2"
flake8-secure-coding-standard = "^1.4.0"
flake8-simplify = "^0.20.0"

[tool.black]
line-length = 120
target_version = ["py311"]
include = '\.pyi?$'
preview = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \.env
  | logs
)/
'''

[tool.mypy]
python_version = "3.11"
files = "*.py"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["(migrations)/$", "manage.py"]
disallow_untyped_calls = false
disallow_untyped_defs = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
